# remindme

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: project_brief.md
scripts/: loop_runner.py  setup_task.ps1
src/: caller.py  config.py  dedupe.py  gcal.py  main.py
stories/: 2026-07-17-gcal-twilio-call-reminders.md
